# CarWorkInventoryDataManager

./: .gitignore  LICENSE  README.md  carworkinventory.py  main.py  pyproject.toml
CarWorkInventoryDataManager/: __init__.py
CarWorkInventoryDataManager/common_helper/: __init__.py  datastructures.py
CarWorkInventoryDataManager/config/: default_config.py
CarWorkInventoryDataManager/conversion/: conversion_helper.py
CarWorkInventoryDataManager/sql/: SQL_CONSTANTS.py  __init__.py  carworkinvsql.py  sql_infrastructure.py
CarWorkInventoryDataManager/sql/schema/: schema.sql
CarWorkInventoryDataManager/sql/test_data/: manual_testing_data.sql  unittest_data.sql
CarWorkInventoryDataManager/web/: customCLI.py  db.py  tableConfig.py  templateFilters.py
CarWorkInventoryDataManager/web/blueprints/: web_car.py  web_home.py
CarWorkInventoryDataManager/web/datastructures/: __init__.py  (+2 more)
common_helper/: datastructures.py
config/: default_config.py
sql/: CWI_schemaBuilder.py  SQL_Constants.py  __init__.py  carworkinvSQL.py  carworkinvsql.py  sql_infrastructure.py
sql/conversion/: conversion_helper.py
sql/databases/: keepdbfolder.gitignore
sql/schema/: schema.sql
sql/test/: test_data.sql
sql/test_data/: unittest_data.sql
tests/: helperForTests.py  test_CWIdb.py  test_CWIflaskapp.py
web/: web_display.py
web/blueprints/: __init__.py  web_car.py  web_home.py
web/config/: config.py
web/helper/: __init__.py  decorators.py  miscHelper.py  tableConfig.py
web/mappings/: textMap.py  textMapping.py  textMapping.txt
web/templates/: car_view.html  index.html
(+9 files in other folders)
